--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem-Vindo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página Responsiva</title>
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/components/header.css">
+  <link rel="stylesheet" href="css/components/scrollbar.css">
+  <link rel="stylesheet" href="css/components/buttons.css">
 </head>
 <body>
-    
+  <header>
+    <h1>FORMULÁRIO GSDPQ</h1>
+  </header>
+  <div class="container">   
+    <button>Realizar GSDPQ</button>
+    <button>GSDS Realizados</button>
+  </div>
 </body>
 </html>
