mudando de ideia em relação a visualização, recomeçando

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Página Responsiva</title>
+  <link rel="stylesheet" href="css/pages/index.css">
   <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="css/components/header.css">
-  <link rel="stylesheet" href="css/components/scrollbar.css">
-  <link rel="stylesheet" href="css/components/buttons.css">
 </head>
 <body>
-  <header>
-    <h1>FORMULÁRIO GSDPQ</h1>
-  </header>
-  <div class="container">   
-    <button>Realizar GSDPQ</button>
-    <button>GSDS Realizados</button>
+  <h1 id="title">
+    FORMULÁRIO GSDPQ
+  </h1>
+  <div class="container"> 
   </div>
+ 
 </body>
 </html>
