--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
-  <h1 id="title">
-    FORMULÁRIO GSDPQ
-  </h1>
-  <div class="container"> 
+  <div id="page">
+    <h1 id="title">
+      FORMULÁRIO GSDPQ
+    </h1>
+    <div class="container"> 
+    </div>
   </div>
- 
 </body>
 </html>
