--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Página Responsiva</title>
   <link rel="stylesheet" href="css/pages/index.css">
   <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/components/buttons.css">
 </head>
 <body>
   <div id="page">
@@ -13,6 +14,10 @@
       FORMULÁRIO GSDPQ
     </h1>
     <div class="container"> 
+      <div>
+        <button>NOVA AVALIAÇÃO</button>
+        <button>AVALIAÇÕES ANTERIORES</button>
+      </div>
     </div>
   </div>
 </body>
