--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     </h1>
     <div class="container"> 
       <div>
-        <button>NOVA AVALIAÇÃO</button>
-        <button>AVALIAÇÕES ANTERIORES</button>
+        <button class="adicao">&#65291;</button>
       </div>
     </div>
   </div>
 </body>
 </html>
+ 
